<resources>
    <string name="app_name">CityCipher</string>
    <color name="green">#089f90</color>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="Sign_up">sign up</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="join">join</string>
    <string name="user_name_must_be_at_least">User name must be at least</string>
    <string name="characters_long">characters long</string>
    <string name="password_must_be_at_least">Password must be at least</string>
    <string name="username_must_be_less_than">Username must be less than</string>
    <string name="password_must_be_less_than">Password must be less than</string>
    <string name="password_and_confirm_password_must_be_equal">Password and Confirm Password must be equal</string>
    <string name="log_out">log out</string>
    <string name="new_post_button">+</string>
    <string name="title_activity_maps">Map</string>
    <string name="post_drawing">Post</string>
    <string name="title_activity_hobo_signs_view">HoboSignsView</string>

    <string name="hello_world">Hello world!</string>

</resources>
